# Tactica

./: .gitignore  AGENTS.md  Cargo.toml  README.md  download-stockfish.sh
.github/workflows/: build.yml  release.yml
assets/: openings.tsv
legal/: ASSET_LICENSES.md  THIRD_PARTY_NOTICES.md  cargo-about.hbs  cargo-about.toml
packaging/aur/: PKGBUILD  PKGBUILD.template  README.md
packaging/linux/: tactica.desktop
src/: lib.rs  main.rs  metadata.rs  storage.rs
src/core/: board.rs  config.rs  engine.rs  game_review.rs  library.rs  mod.rs  openings.rs  outcome.rs  pgn.rs  review.rs
src/core/modes/: chessle.rs  mod.rs  study.rs  trivia.rs
src/iced/: app.rs  assets.rs  controls.rs  layout.rs  mod.rs  panels.rs  style.rs
src/iced/pages/: chessle.rs  game_review.rs  mod.rs  quick_board.rs  study.rs  trivia.rs
src/iced/widgets/: board.rs  common.rs  engine_ui.rs  library_sidebar.rs  mod.rs  move_ribbon.rs  review_assets.rs  right_panel.rs  shake.rs  sidebar.rs  toast.rs  top_bar.rs
